--- a/day04_embedding_and_visualizing/day4_0_word2vec_and_doc2vec_moviereview.ipynb
+++ b/day04_embedding_and_visualizing/day4_0_word2vec_and_doc2vec_moviereview.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "gensim이 버전업데이트를 최근에 자주해서, 자료의 gensim version을 미리 적어둡니다. \n",
     "\n",
-    "현재 최신버전은 3.8 입니다. 이번 실습에서도 3.6 을 이용하였습니다.\n",
+    "현재 최신버전은 3.8.1 입니다.\n",
     "\n",
     "곧 버전이 4.0+ 으로 올라갈 것 같은데, 지금까지는 Word2Vec.most_similar () 함수를 이용하여 유사어 검색이 가능했습니다. 4.0+ 이후에 이 함수가 Word2Vec.wv.most_similar 로 옮겨집니다."
    ]
@@ -22,14 +22,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "soynlp=0.0.493\n",
-      "added lovit_textmining_dataset\n",
-      "Gensim version = 3.6.0\n"
+      "Gensim version = 3.8.1\n"
      ]
     }
    ],
    "source": [
-    "import config\n",
     "import gensim\n",
     "print('Gensim version = {}'.format(gensim.__version__))\n",
     "\n",
@@ -105,7 +102,7 @@
     }
    ],
    "source": [
-    "from navermovie_comments import get_movie_comments_path\n",
+    "from lovit_textmining_dataset.navermovie_comments import get_movie_comments_path\n",
     "\n",
     "path = get_movie_comments_path(large=False, tokenize='soynlp_unsup')\n",
     "word2vec_corpus = Word2VecComments(path, verbose=False)\n",
@@ -149,8 +146,8 @@
       "iter=3, sents=294492 done\n",
       "iter=4, sents=294492 done\n",
       "iter=5, sents=294492 done\n",
-      "CPU times: user 50.7 s, sys: 436 ms, total: 51.1 s\n",
-      "Wall time: 22.4 s\n"
+      "CPU times: user 58 s, sys: 424 ms, total: 58.5 s\n",
+      "Wall time: 29.5 s\n"
      ]
     }
    ],
@@ -178,16 +175,16 @@
     {
      "data": {
       "text/plain": [
-       "[('sf영화', 0.6216995120048523),\n",
-       " ('작품', 0.578985869884491),\n",
-       " ('명화', 0.5262651443481445),\n",
-       " ('영화들', 0.5242026448249817),\n",
-       " ('듯하다', 0.504309356212616),\n",
-       " ('거다', 0.4938274025917053),\n",
-       " ('장르', 0.4936041831970215),\n",
-       " ('영화였네요', 0.4894641935825348),\n",
-       " ('것같다', 0.4892660975456238),\n",
-       " ('영화들이', 0.47598782181739807)]"
+       "[('sf영화', 0.6210544109344482),\n",
+       " ('작품', 0.5381431579589844),\n",
+       " ('영화들', 0.5258289575576782),\n",
+       " ('명화', 0.5117579698562622),\n",
+       " ('것같다', 0.5019050240516663),\n",
+       " ('장르', 0.4921502470970154),\n",
+       " ('영화지만', 0.49147355556488037),\n",
+       " ('영화들이', 0.4755135178565979),\n",
+       " ('영화였네요', 0.46158567070961),\n",
+       " ('느와르', 0.4591276943683624)]"
       ]
      },
      "execution_count": 5,
@@ -207,16 +204,16 @@
     {
      "data": {
       "text/plain": [
-       "[('2D', 0.9034042954444885),\n",
-       " ('4DX', 0.902402400970459),\n",
-       " ('4d', 0.8975728154182434),\n",
-       " ('4dx', 0.8921607732772827),\n",
-       " ('3d', 0.8825711607933044),\n",
-       " ('VOD', 0.8695594072341919),\n",
-       " ('4D', 0.8659766316413879),\n",
-       " ('4디', 0.8553564548492432),\n",
-       " ('쓰리디', 0.8470793962478638),\n",
-       " ('포디', 0.8454238176345825)]"
+       "[('4d', 0.915297269821167),\n",
+       " ('2D', 0.911193311214447),\n",
+       " ('4DX', 0.881563127040863),\n",
+       " ('3d', 0.8752312064170837),\n",
+       " ('VOD', 0.8748818039894104),\n",
+       " ('디지털', 0.8632819652557373),\n",
+       " ('4D', 0.8574143648147583),\n",
+       " ('imax', 0.8495155572891235),\n",
+       " ('쓰리디', 0.8456065058708191),\n",
+       " ('포디', 0.8401645421981812)]"
       ]
      },
      "execution_count": 6,
@@ -319,7 +316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from navermovie_comments import load_trained_embedding\n",
+    "from lovit_textmining_dataset.navermovie_comments import load_trained_embedding\n",
     "\n",
     "word2vec_model = load_trained_embedding(\n",
     "    data_name = 'large',\n",
@@ -343,12 +340,12 @@
     {
      "data": {
       "text/plain": [
-       "[('애니', 0.7622032165527344),\n",
+       "[('애니', 0.7622032761573792),\n",
        " ('영회', 0.7138155102729797),\n",
        " ('애니메이션', 0.6826601028442383),\n",
        " ('영하', 0.6804906129837036),\n",
-       " ('여화', 0.6422345042228699),\n",
-       " ('영호ㅏ', 0.6399881839752197),\n",
+       " ('여화', 0.6422344446182251),\n",
+       " ('영호ㅏ', 0.6399882435798645),\n",
        " ('명화', 0.6227416396141052),\n",
        " ('영화ㅋ', 0.6182453632354736),\n",
        " ('드라마', 0.6110595464706421),\n",
@@ -356,7 +353,7 @@
        " ('영화들', 0.601367175579071),\n",
        " ('작품', 0.6008715629577637),\n",
        " ('장르영화', 0.5893300175666809),\n",
-       " ('영화였고', 0.5842821002006531),\n",
+       " ('영화였고', 0.5842821598052979),\n",
        " ('영화내요', 0.5827130079269409),\n",
        " ('영화였네요', 0.5813204050064087),\n",
        " ('양화', 0.5806300640106201),\n",
@@ -365,9 +362,9 @@
        " ('에니메이션', 0.5671166181564331),\n",
        " ('영화인것', 0.5665518045425415),\n",
        " ('영화지만', 0.5654911994934082),\n",
-       " ('영화ㅋㅋ', 0.5525495409965515),\n",
+       " ('영화ㅋㅋ', 0.5525494813919067),\n",
        " ('영환데', 0.5350443124771118),\n",
-       " ('엉화', 0.5329785943031311),\n",
+       " ('엉화', 0.5329785346984863),\n",
        " ('대중영화', 0.5315350294113159),\n",
        " ('블록버스터', 0.5307241678237915),\n",
        " ('영화ㅠㅠ', 0.5289486646652222),\n",
@@ -560,11 +557,11 @@
       "text/plain": [
        "[('애니', 0.7179281115531921),\n",
        " ('영회', 0.6447778940200806),\n",
-       " ('여화', 0.6053319573402405),\n",
-       " ('영하', 0.5925475358963013),\n",
+       " ('여화', 0.6053318977355957),\n",
+       " ('영하', 0.592547595500946),\n",
        " ('엉화', 0.5851074457168579),\n",
        " ('애니메이션', 0.5821044445037842),\n",
-       " ('sf영화', 0.5817106366157532),\n",
+       " ('sf영화', 0.581710696220398),\n",
        " ('양화', 0.5816899538040161),\n",
        " ('애니영화', 0.5751307010650635),\n",
        " ('영화였고', 0.5723588466644287)]"
@@ -589,13 +586,13 @@
       "text/plain": [
        "[('톰하디', 0.8216360807418823),\n",
        " ('레오', 0.8157205581665039),\n",
-       " ('브래드피트', 0.8099828362464905),\n",
+       " ('브래드피트', 0.8099828958511353),\n",
        " ('니콜라스홀트', 0.8012720346450806),\n",
-       " ('베네딕트', 0.8000675439834595),\n",
+       " ('베네딕트', 0.8000676035881042),\n",
        " ('앤해서웨이', 0.7960273027420044),\n",
-       " ('앤헤서웨이', 0.7938776016235352),\n",
-       " ('로다주', 0.7688085436820984),\n",
-       " ('컴버배치', 0.7668709754943848),\n",
+       " ('앤헤서웨이', 0.7938777208328247),\n",
+       " ('로다주', 0.7688084840774536),\n",
+       " ('컴버배치', 0.76687091588974),\n",
        " ('프레디', 0.7544741630554199)]"
       ]
      },
@@ -701,15 +698,15 @@
     {
      "data": {
       "text/plain": [
-       "[('#73344', 0.8099368214607239),\n",
+       "[('#73344', 0.8099367618560791),\n",
        " ('#48246', 0.7621855735778809),\n",
        " ('#42589', 0.7321667671203613),\n",
-       " ('#102824', 0.7295334339141846),\n",
-       " ('#76080', 0.7153507471084595),\n",
-       " ('#88225', 0.707548975944519),\n",
+       " ('#102824', 0.729533314704895),\n",
+       " ('#76080', 0.7153506278991699),\n",
+       " ('#88225', 0.7075489163398743),\n",
        " ('#48227', 0.7025582790374756),\n",
        " ('#41450', 0.6783559918403625),\n",
-       " ('#64191', 0.6762220859527588),\n",
+       " ('#64191', 0.676222026348114),\n",
        " ('#75355', 0.6696109771728516)]"
       ]
      },
@@ -737,15 +734,15 @@
     {
      "data": {
       "text/plain": [
-       "[('#73344', 0.8099368214607239),\n",
+       "[('#73344', 0.8099367618560791),\n",
        " ('#48246', 0.7621855735778809),\n",
        " ('#42589', 0.7321667671203613),\n",
-       " ('#102824', 0.7295334339141846),\n",
-       " ('#76080', 0.7153507471084595),\n",
-       " ('#88225', 0.707548975944519),\n",
+       " ('#102824', 0.729533314704895),\n",
+       " ('#76080', 0.7153506278991699),\n",
+       " ('#88225', 0.7075489163398743),\n",
        " ('#48227', 0.7025582790374756),\n",
        " ('#41450', 0.6783559918403625),\n",
-       " ('#64191', 0.6762220859527588),\n",
+       " ('#64191', 0.676222026348114),\n",
        " ('#75355', 0.6696109771728516)]"
       ]
      },
@@ -771,7 +768,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from navermovie_comments import load_id_to_movie\n",
+    "from lovit_textmining_dataset.navermovie_comments import load_id_to_movie\n",
     "\n",
     "idx_to_movie = load_id_to_movie()"
    ]
@@ -797,12 +794,12 @@
       "라라랜드\n",
       "\n",
       "('비긴 어게인', '96379', 0.9024428129196167)\n",
-      "('어바웃 타임', '92075', 0.8169593811035156)\n",
+      "('어바웃 타임', '92075', 0.8169595003128052)\n",
       "('인턴', '118917', 0.710594654083252)\n",
-      "('인사이드 아웃', '115622', 0.6986128091812134)\n",
+      "('인사이드 아웃', '115622', 0.6986126899719238)\n",
       "('시간을 달리는 소녀', '63513', 0.6862818002700806)\n",
       "('하울의 움직이는 성', '39640', 0.6862198114395142)\n",
-      "('레미제라블', '89755', 0.6842659115791321)\n",
+      "('레미제라블', '89755', 0.6842658519744873)\n",
       "('미스 페레그린과 이상한 아이들의 집', '129383', 0.6826176047325134)\n",
       "('뷰티 인사이드', '129050', 0.6816157698631287)\n",
       "('겨울왕국', '100931', 0.6804711222648621)\n"
@@ -832,16 +829,16 @@
      "text": [
       "관상\n",
       "\n",
-      "('역린', '108225', 0.8302775621414185)\n",
+      "('역린', '108225', 0.8302776217460632)\n",
       "('광해, 왕이 된 남자', '83893', 0.8152835369110107)\n",
-      "('군도:민란의 시대', '99752', 0.7720686197280884)\n",
-      "('사도', '121922', 0.751989483833313)\n",
-      "('도둑들', '78726', 0.7223832011222839)\n",
+      "('군도:민란의 시대', '99752', 0.7720687389373779)\n",
+      "('사도', '121922', 0.7519895434379578)\n",
+      "('도둑들', '78726', 0.7223831415176392)\n",
       "('검사외전', '130903', 0.719760537147522)\n",
       "('신세계', '91031', 0.7194761037826538)\n",
       "('의형제', '52548', 0.7159029245376587)\n",
       "('밀정', '137952', 0.6845557689666748)\n",
-      "('쌍화점', '45232', 0.6726132035255432)\n"
+      "('쌍화점', '45232', 0.6726131439208984)\n"
      ]
     }
    ],
@@ -867,11 +864,11 @@
       "('라디오 스타', '58088', 0.7411540746688843)\n",
       "('파파로티', '85640', 0.7076984643936157)\n",
       "('수상한 그녀', '107924', 0.6803666353225708)\n",
-      "('시라노; 연애조작단', '73318', 0.6777384877204895)\n",
-      "('왕의 남자', '39894', 0.6738080978393555)\n",
+      "('시라노; 연애조작단', '73318', 0.6777384281158447)\n",
+      "('왕의 남자', '39894', 0.6738080382347107)\n",
       "('미녀는 괴로워', '39157', 0.6719443798065186)\n",
-      "('도둑들', '78726', 0.6672611832618713)\n",
-      "('신세계', '91031', 0.6661688685417175)\n"
+      "('도둑들', '78726', 0.6672611236572266)\n",
+      "('신세계', '91031', 0.6661689281463623)\n"
      ]
     }
    ],
@@ -892,11 +889,11 @@
      "text": [
       "아바타\n",
       "\n",
-      "('트랜스포머', '61521', 0.8492669463157654)\n",
+      "('트랜스포머', '61521', 0.8492670059204102)\n",
       "('디스트릭트 9', '64129', 0.8323827385902405)\n",
       "('2012', '49727', 0.7791959643363953)\n",
-      "('인셉션', '52515', 0.7713688611984253)\n",
-      "('스카이라인', '76581', 0.7526601552963257)\n",
+      "('인셉션', '52515', 0.7713688015937805)\n",
+      "('스카이라인', '76581', 0.7526602149009705)\n",
       "('다크 나이트', '62586', 0.746321439743042)\n",
       "('그래비티', '47370', 0.738884687423706)\n",
       "('퍼시픽 림', '86867', 0.7356865406036377)\n",
@@ -910,6 +907,13 @@
     "for similar in doc2vec_model.docvecs.most_similar('#62266'):\n",
     "    print(as_name(similar))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
