--- a/day04_embedding_and_visualizing/day4_2_embedding_for_visualization_matplotlib.ipynb
+++ b/day04_embedding_and_visualizing/day4_2_embedding_for_visualization_matplotlib.ipynb
@@ -41,8 +41,6 @@
     }
    ],
    "source": [
-    "import config\n",
-    "\n",
     "def load_dictionary(path):\n",
     "    with open(path, encoding='utf-8') as f:\n",
     "        dictionary = {word.strip() for word in f}\n",
@@ -68,7 +66,7 @@
    ],
    "source": [
     "import numpy as np\n",
-    "from navernews_10days import get_bow\n",
+    "from lovit_textmining_dataset.navernews_10days import get_bow\n",
     "\n",
     "x0, idx_to_vocab0, vocab_to_idx0 = get_bow(date='2016-10-20', tokenize='noun')\n",
     "\n",
