--- a/day04_embedding_and_visualizing/day4_4_fasttext_gensim.ipynb
+++ b/day04_embedding_and_visualizing/day4_4_fasttext_gensim.ipynb
@@ -15,20 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "soynlp=0.0.493\n",
-      "added lovit_textmining_dataset\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import config\n",
     "import re\n",
     "from soynlp.hangle import decompose, compose\n",
     "\n",
@@ -66,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -100,8 +90,8 @@
     }
    ],
    "source": [
-    "from navermovie_comments import get_movie_comments_path\n",
-    "from navermovie_comments import load_trained_embedding\n",
+    "from lovit_textmining_dataset.navermovie_comments import get_movie_comments_path\n",
+    "from lovit_textmining_dataset.navermovie_comments import load_trained_embedding\n",
     "\n",
     "\n",
     "class FastTextCorpus:\n",
@@ -135,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,25 +173,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('재미있엇다', 0.9712421894073486),\n",
-       " ('재밌다', 0.9677714705467224),\n",
+       " ('재밌다', 0.9677715301513672),\n",
        " ('재미있겠다', 0.9657906293869019),\n",
        " ('재미있었다', 0.9524913430213928),\n",
-       " ('재밌겠다', 0.9505969285964966),\n",
-       " ('재밌었다', 0.9446882605552673),\n",
-       " ('재밋었다', 0.9390435218811035),\n",
+       " ('재밌겠다', 0.9505969882011414),\n",
+       " ('재밌었다', 0.9446882009506226),\n",
+       " ('재밋었다', 0.9390435814857483),\n",
        " ('재미잇엇다', 0.9227269887924194),\n",
        " ('재밋다', 0.9225164651870728),\n",
        " ('재미잇다', 0.9217596054077148)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
