--- a/day04_embedding_and_visualizing/day4_a_explicit_word_representation_(pmi_svd).ipynb
+++ b/day04_embedding_and_visualizing/day4_a_explicit_word_representation_(pmi_svd).ipynb
@@ -11,20 +11,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "soynlp=0.0.493\n",
-      "added lovit_textmining_dataset\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import config\n",
-    "\n",
-    "from navernews_10days import get_comments_paths\n",
+    "from lovit_textmining_dataset.navernews_10days import get_comments_paths\n",
     "from soynlp.noun import LRNounExtractor_v2\n",
     "from soynlp.tokenizer import LTokenizer\n",
     "from soynlp.utils import DoublespaceLineCorpus\n",
@@ -54,17 +43,17 @@
       "[Noun Extractor] use default predictors\n",
       "[Noun Extractor] num features: pos=3929, neg=2321, common=107\n",
       "[Noun Extractor] counting eojeols\n",
-      "[EojeolCounter] n eojeol = 687560 from 228630 sents. mem=0.198 Gb                    \n",
+      "[EojeolCounter] n eojeol = 695989 from 274369 sents. mem=0.200 Gb                    \n",
       "[Noun Extractor] complete eojeol counter -> lr graph\n",
-      "[Noun Extractor] has been trained. #eojeols=2775027, mem=1.670 Gb\n",
-      "[Noun Extractor] batch prediction was completed for 193198 words\n",
-      "[Noun Extractor] checked compounds. discovered 151319 compounds\n",
-      "[Noun Extractor] postprocessing detaching_features : 167318 -> 120870\n",
-      "[Noun Extractor] postprocessing ignore_features : 120870 -> 120447\n",
-      "[Noun Extractor] postprocessing ignore_NJ : 120447 -> 117740\n",
-      "[Noun Extractor] 117740 nouns (151319 compounds) with min frequency=1\n",
-      "[Noun Extractor] flushing was done. mem=2.027 Gb                    \n",
-      "[Noun Extractor] 69.13 % eojeols are covered\n"
+      "[Noun Extractor] has been trained. #eojeols=2191206, mem=1.948 Gb\n",
+      "[Noun Extractor] batch prediction was completed for 167918 words\n",
+      "[Noun Extractor] checked compounds. discovered 146262 compounds\n",
+      "[Noun Extractor] postprocessing detaching_features : 151558 -> 119849\n",
+      "[Noun Extractor] postprocessing ignore_features : 119849 -> 119486\n",
+      "[Noun Extractor] postprocessing ignore_NJ : 119486 -> 117335\n",
+      "[Noun Extractor] 117335 nouns (146262 compounds) with min frequency=1\n",
+      "[Noun Extractor] flushing was done. mem=2.344 Gb                    \n",
+      "[Noun Extractor] 67.99 % eojeols are covered\n"
      ]
     },
     {
@@ -107,9 +96,9 @@
      "output_type": "stream",
      "text": [
       "Create (word, contexts) matrix\n",
-      "  - counting word frequency from 228629 sents, mem=2.172 Gb\n",
-      "  - scanning (word, context) pairs from 228629 sents, mem=2.172 Gb\n",
-      "  - (word, context) matrix was constructed. shape = (30618, 30618)                    \n",
+      "  - counting word frequency from 274368 sents, mem=2.533 Gb\n",
+      "  - scanning (word, context) pairs from 274368 sents, mem=2.533 Gb\n",
+      "  - (word, context) matrix was constructed. shape = (25954, 25954)                    \n",
       "  - done\n"
      ]
     }
@@ -144,7 +133,7 @@
     {
      "data": {
       "text/plain": [
-       "(30618, 30618)"
+       "(25954, 25954)"
       ]
      },
      "execution_count": 4,
@@ -179,8 +168,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1340\n",
-      "1984\n"
+      "1965\n",
+      "1780\n"
      ]
     }
    ],
@@ -258,16 +247,16 @@
     {
      "data": {
       "text/plain": [
-       "[('블랙핑크', 0.6581659649921858),\n",
-       " ('트와이스', 0.6258572495971212),\n",
-       " ('엑소', 0.5828096369899102),\n",
-       " ('여자친구', 0.5788681011489352),\n",
-       " ('노래', 0.5463866900815891),\n",
-       " ('우리나라', 0.5435773641801577),\n",
-       " ('아오아', 0.5379811668561362),\n",
-       " ('우리', 0.5273834320883796),\n",
-       " ('가수', 0.5266958156561162),\n",
-       " ('새누리', 0.5220714249424844)]"
+       "[('블랙핑크', 0.6755289243892053),\n",
+       " ('트와이스', 0.622393548554468),\n",
+       " ('엑소', 0.6033211536727949),\n",
+       " ('우리나라', 0.5597736444192414),\n",
+       " ('아오아', 0.5504612405602796),\n",
+       " ('새누리', 0.5437366100639845),\n",
+       " ('노래', 0.5421394745971377),\n",
+       " ('우리', 0.541453581008619),\n",
+       " ('에이핑크', 0.5350674956377075),\n",
+       " ('김제동씨', 0.5314901989405921)]"
       ]
      },
      "execution_count": 7,
@@ -294,16 +283,16 @@
     {
      "data": {
       "text/plain": [
-       "[('회사', 0.8037971762424634),\n",
-       " ('우리나라', 0.7900979733733253),\n",
-       " ('머리', 0.78224110041578),\n",
-       " ('우리', 0.7763852370588487),\n",
-       " ('이나라', 0.764068648599605),\n",
-       " ('정부', 0.7632069770872995),\n",
-       " ('학교', 0.7615474449969353),\n",
-       " ('너네', 0.7518707053229157),\n",
-       " ('스크린도어', 0.7501438876269355),\n",
-       " ('새누리', 0.7406757432943758)]"
+       "[('우리나라', 0.8037611170388616),\n",
+       " ('회사', 0.8037363349622527),\n",
+       " ('우리', 0.790296534084028),\n",
+       " ('머리', 0.787885823985501),\n",
+       " ('이나라', 0.7806776760312693),\n",
+       " ('정부', 0.7785169302184154),\n",
+       " ('스크린도어', 0.7652516200989101),\n",
+       " ('여자', 0.7515296898487684),\n",
+       " ('트럼프', 0.7500540890560078),\n",
+       " ('새누리', 0.7490903619478668)]"
       ]
      },
      "execution_count": 8,
@@ -350,16 +339,16 @@
     {
      "data": {
       "text/plain": [
-       "[('ioi', 0.17973380445809284),\n",
-       " ('블랙핑크', 0.16560387184185066),\n",
-       " ('트와이스', 0.15580021478108652),\n",
-       " ('아오아', 0.14810905975425448),\n",
-       " ('블핑', 0.1361151825149176),\n",
-       " ('너무너무너무', 0.13231819811777146),\n",
-       " ('CLC', 0.12497139230114185),\n",
-       " ('엑소', 0.12160576569048331),\n",
-       " ('방탄', 0.11965180115621088),\n",
-       " ('트와', 0.11833934686696168)]"
+       "[('ioi', 0.1809293643175891),\n",
+       " ('블랙핑크', 0.16269404370236584),\n",
+       " ('IOI', 0.15126054480342965),\n",
+       " ('블핑', 0.14611345956000332),\n",
+       " ('트와이스', 0.1423420888369824),\n",
+       " ('아오아', 0.14219738108886726),\n",
+       " ('방탄', 0.1324156115896984),\n",
+       " ('신곡', 0.12363733671446919),\n",
+       " ('컴백', 0.11995624410107986),\n",
+       " ('트와', 0.11677553503826488)]"
       ]
      },
      "execution_count": 10,
@@ -388,16 +377,16 @@
     {
      "data": {
       "text/plain": [
-       "[('비제이', 0.08428223905858767),\n",
-       " ('bj', 0.07921126656182187),\n",
-       " ('수수료', 0.0742366382647287),\n",
-       " ('중동', 0.07224957662291298),\n",
-       " ('유튜브', 0.06996363416062701),\n",
-       " ('플랫폼', 0.06782625167091183),\n",
-       " ('대도서관', 0.06712023146678547),\n",
-       " ('벌어들', 0.06647189913183482),\n",
-       " ('유투브', 0.06417289761041922),\n",
-       " ('클린', 0.061716503788260324)]"
+       "[('bj', 0.09174008479376838),\n",
+       " ('비제이', 0.09034566575512504),\n",
+       " ('유튜브', 0.08198154421369663),\n",
+       " ('유투브', 0.07862526889424482),\n",
+       " ('동남아', 0.07464494039211789),\n",
+       " ('수수료', 0.07396822530612046),\n",
+       " ('있을리', 0.0735855790226736),\n",
+       " ('중동', 0.0733190010723227),\n",
+       " ('삐지면', 0.069371423755756),\n",
+       " ('남미', 0.06922054503695707)]"
       ]
      },
      "execution_count": 11,
@@ -445,16 +434,16 @@
     {
      "data": {
       "text/plain": [
-       "[('블랙핑크', 0.7965188797621157),\n",
-       " ('트와이스', 0.7951284625715093),\n",
-       " ('블핑', 0.7740097675003359),\n",
-       " ('트와', 0.7493663315577943),\n",
-       " ('엑소', 0.7408083642013694),\n",
-       " ('ioi', 0.7250002122971044),\n",
-       " ('빅뱅', 0.7234435047012071),\n",
-       " ('아오아', 0.7097597687481514),\n",
-       " ('여자친구', 0.704434021408181),\n",
-       " ('방탄', 0.6874623193165361)]"
+       "[('블랙핑크', 0.7981585963342795),\n",
+       " ('트와이스', 0.7471412848682975),\n",
+       " ('블핑', 0.7333447881893075),\n",
+       " ('여자친구', 0.7070539576074238),\n",
+       " ('ioi', 0.6885774490246201),\n",
+       " ('아오아', 0.6850071208237152),\n",
+       " ('트와', 0.68421616590016),\n",
+       " ('컴백', 0.672958981872358),\n",
+       " ('빅뱅', 0.662335156429146),\n",
+       " ('신곡', 0.6614188063703947)]"
       ]
      },
      "execution_count": 13,
@@ -474,16 +463,16 @@
     {
      "data": {
       "text/plain": [
-       "[('유투브', 0.4899624680949647),\n",
-       " ('유튜브', 0.4607744719229442),\n",
-       " ('bj', 0.45474446236500043),\n",
-       " ('프로그램', 0.43869881299333),\n",
-       " ('한계', 0.43799992904494467),\n",
-       " ('중소기업', 0.4284874079048935),\n",
-       " ('후진국', 0.4225473546074232),\n",
-       " ('동남아', 0.42075192796849603),\n",
-       " ('이슬람', 0.4187904041774626),\n",
-       " ('이미지', 0.4114119571148269)]"
+       "[('유튜브', 0.4449765493633768),\n",
+       " ('인터넷', 0.43866986095898786),\n",
+       " ('유투브', 0.43200091044265876),\n",
+       " ('동남아', 0.4208089858095101),\n",
+       " ('유럽', 0.4109185784018816),\n",
+       " ('선진국', 0.4044908624512855),\n",
+       " ('한국사람', 0.4040292067731064),\n",
+       " ('국내', 0.4036200429166752),\n",
+       " ('중동', 0.4007907540652521),\n",
+       " ('TV', 0.39919460520603267)]"
       ]
      },
      "execution_count": 14,
@@ -544,16 +533,16 @@
     {
      "data": {
       "text/plain": [
-       "[('트와이스', 0.7562570038775457),\n",
-       " ('블랙핑크', 0.7542341700254398),\n",
-       " ('엑소', 0.679682713038533),\n",
-       " ('트와', 0.6700636725186646),\n",
-       " ('블핑', 0.6696587966066099),\n",
-       " ('ioi', 0.6506407392295206),\n",
-       " ('빅뱅', 0.6324141740977194),\n",
-       " ('여자친구', 0.6268380730416317),\n",
-       " ('아오아', 0.6158338023198218),\n",
-       " ('유닛', 0.6025530918570341)]"
+       "[('블랙핑크', 0.6963338694909909),\n",
+       " ('트와이스', 0.6927600045816528),\n",
+       " ('ioi', 0.6137406826522469),\n",
+       " ('블핑', 0.6072816279453563),\n",
+       " ('아오아', 0.5877446138325634),\n",
+       " ('여자친구', 0.5770751000180948),\n",
+       " ('신곡', 0.5692154765190212),\n",
+       " ('트와', 0.5685233305841946),\n",
+       " ('엑소', 0.5663855338125494),\n",
+       " ('빅뱅', 0.5655052010733637)]"
       ]
      },
      "execution_count": 16,
@@ -573,16 +562,16 @@
     {
      "data": {
       "text/plain": [
-       "[('유투브', 0.3864460957574195),\n",
-       " ('티비', 0.35121599517166446),\n",
-       " ('bj', 0.33680517731984305),\n",
-       " ('유튜브', 0.3335360050218502),\n",
-       " ('비제이', 0.3188627913806349),\n",
-       " ('중동', 0.30562114059481327),\n",
-       " ('동남아', 0.297176342770448),\n",
-       " ('시청자', 0.28850889710176764),\n",
-       " ('tv', 0.2873335460623294),\n",
-       " ('이슬람', 0.2803188144537745)]"
+       "[('철구', 0.3300399080741523),\n",
+       " ('비제이', 0.30671525295552393),\n",
+       " ('동남아', 0.3005379534528194),\n",
+       " ('유튜브', 0.3002160056698727),\n",
+       " ('bj', 0.2994103509084116),\n",
+       " ('티비', 0.27348955973975997),\n",
+       " ('필리핀', 0.266659702734819),\n",
+       " ('ㅅㅍ', 0.26646295692639677),\n",
+       " ('중동', 0.2625211073841971),\n",
+       " ('시청자', 0.25874905930033076)]"
       ]
      },
      "execution_count": 17,
