--- a/day04_embedding_and_visualizing/day4_a_word2vec_news_embedding_(space_tokenization).ipynb
+++ b/day04_embedding_and_visualizing/day4_a_word2vec_news_embedding_(space_tokenization).ipynb
@@ -11,19 +11,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "soynlp=0.0.493\n",
-      "added lovit_textmining_dataset\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import config\n",
-    "from navernews_10days import get_news_paths\n",
+    "from lovit_textmining_dataset.navernews_10days import get_news_paths\n",
     "\n",
     "path = get_news_paths(date='2016-10-20', tokenize=None)"
    ]
@@ -159,49 +149,198 @@
       "\n",
       "Query = 김무성\n",
       "Vocab(count:40, index:13718, sample_int:4294967296)\n",
-      "김무성 - 김종인 (87, 0.892)\n",
-      "김무성 - 대표와 (232, 0.879)\n",
-      "김무성 - 이재오 (32, 0.867)\n",
-      "김무성 - 사무총장 (104, 0.856)\n",
-      "김무성 - 안철수 (193, 0.856)\n",
-      "김무성 - 오세훈 (34, 0.841)\n",
-      "김무성 - 정의화 (33, 0.829)\n",
-      "김무성 - 서울시장 (37, 0.829)\n",
-      "김무성 - 김문수 (69, 0.823)\n",
-      "김무성 - 김부겸 (39, 0.818)\n",
+      "김무성 - 오세훈 (34, 0.891)\n",
+      "김무성 - 이재정 (102, 0.863)\n",
+      "김무성 - 이재오 (32, 0.862)\n",
+      "김무성 - 강만수 (33, 0.862)\n",
+      "김무성 - 측근인 (31, 0.861)\n",
+      "김무성 - 정의화 (33, 0.860)\n",
+      "김무성 - 사무총장 (104, 0.859)\n",
+      "김무성 - 대표와 (232, 0.857)\n",
+      "김무성 - 안철수 (193, 0.843)\n",
+      "김무성 - 김종인 (87, 0.843)\n",
       "\n",
       "\n",
       "Query = 박근혜\n",
       "Vocab(count:1412, index:261, sample_int:4294967296)\n",
-      "박근혜 - 올랑드 (53, 0.786)\n",
-      "박근혜 - 박 (2276, 0.785)\n",
-      "박근혜 - 두테르테 (334, 0.757)\n",
-      "박근혜 - 노 (190, 0.742)\n",
-      "박근혜 - 푸틴 (124, 0.732)\n",
-      "박근혜 - 오바마 (229, 0.713)\n",
-      "박근혜 - 정권 (183, 0.677)\n",
-      "박근혜 - 노무현 (266, 0.665)\n",
-      "박근혜 - 대통령이 (1454, 0.648)\n",
-      "박근혜 - 블라디미르 (73, 0.646)\n",
+      "박근혜 - 박 (2276, 0.766)\n",
+      "박근혜 - 두테르테 (334, 0.760)\n",
+      "박근혜 - 올랑드 (53, 0.753)\n",
+      "박근혜 - 푸틴 (124, 0.720)\n",
+      "박근혜 - 노 (190, 0.703)\n",
+      "박근혜 - 오바마 (229, 0.693)\n",
+      "박근혜 - 대통령이 (1454, 0.692)\n",
+      "박근혜 - 노무현 (266, 0.672)\n",
+      "박근혜 - 야당을 (30, 0.649)\n",
+      "박근혜 - 프랑수아 (32, 0.648)\n",
       "\n",
       "\n",
       "Query = 문재인\n",
       "Vocab(count:933, index:411, sample_int:4294967296)\n",
-      "문재인 - 안철수 (193, 0.878)\n",
-      "문재인 - 문 (742, 0.871)\n",
+      "문재인 - 안철수 (193, 0.891)\n",
+      "문재인 - 문 (742, 0.890)\n",
       "문재인 - 반기문 (136, 0.842)\n",
-      "문재인 - 송민순 (814, 0.793)\n",
-      "문재인 - 당내 (73, 0.788)\n",
-      "문재인 - 김종인 (87, 0.784)\n",
-      "문재인 - 송 (339, 0.781)\n",
-      "문재인 - 대표의 (613, 0.780)\n",
-      "문재인 - 탈당 (189, 0.779)\n",
-      "문재인 - 색깔론 (68, 0.779)\n",
+      "문재인 - 당내 (73, 0.822)\n",
+      "문재인 - 대표의 (613, 0.814)\n",
+      "문재인 - 색깔론 (68, 0.814)\n",
+      "문재인 - 송민순 (814, 0.808)\n",
+      "문재인 - 야권 (134, 0.793)\n",
+      "문재인 - 손학규 (1217, 0.792)\n",
+      "문재인 - 탈당 (189, 0.784)\n",
       "\n",
       "\n",
       "Query = 국방부\n",
       "Vocab(count:327, index:1515, sample_int:4294967296)\n",
-      "국방부 - 한민구 (143, 0.906)"
+      "국방부 - 카터 (207, 0.909)\n",
+      "국방부 - 한민구 (143, 0.896)\n",
+      "국방부 - 국방장관이 (83, 0.879)\n",
+      "국방부 - 애슈턴 (130, 0.874)\n",
+      "국방부 - 케리 (401, 0.859)\n",
+      "국방부 - 외교부 (418, 0.859)\n",
+      "국방부 - 국무장관과 (40, 0.857)\n",
+      "국방부 - 윤병세 (297, 0.843)\n",
+      "국방부 - 참석하는 (94, 0.837)\n",
+      "국방부 - 산업통상자원부 (114, 0.836)\n",
+      "\n",
+      "\n",
+      "Query = 정부\n",
+      "Vocab(count:1005, index:380, sample_int:4294967296)\n",
+      "정부 - 정부의 (677, 0.883)\n",
+      "정부 - 정부와 (203, 0.794)\n",
+      "정부 - 예산 (305, 0.785)\n",
+      "정부 - 내년도 (114, 0.755)\n",
+      "정부 - 누리과정 (45, 0.754)\n",
+      "정부 - 집권 (37, 0.753)\n",
+      "정부 - 현 (689, 0.749)\n",
+      "정부 - 국가 (496, 0.749)\n",
+      "정부 - 정부에서 (98, 0.746)\n",
+      "정부 - 정부는 (726, 0.742)\n",
+      "\n",
+      "\n",
+      "Query = 국정원\n",
+      "Vocab(count:284, index:1794, sample_int:4294967296)\n",
+      "국정원 - 이병호 (366, 0.832)\n",
+      "국정원 - 국감에서 (136, 0.806)\n",
+      "국정원 - 정보위 (292, 0.789)\n",
+      "국정원 - 국정원장 (127, 0.785)\n",
+      "국정원 - 국가정보원 (41, 0.780)\n",
+      "국정원 - 국정원장의 (162, 0.778)\n",
+      "국정원 - 김만복 (235, 0.775)\n",
+      "국정원 - 국정원장은 (139, 0.763)\n",
+      "국정원 - 통화에서 (130, 0.761)\n",
+      "국정원 - 국정원장이 (297, 0.761)\n",
+      "\n",
+      "\n",
+      "Query = 대통령\n",
+      "Vocab(count:1187, index:309, sample_int:4294967296)\n",
+      "대통령 - 대통령의 (856, 0.861)\n",
+      "대통령 - 대통령과 (197, 0.845)\n",
+      "대통령 - 대통령도 (53, 0.820)\n",
+      "대통령 - 김대중 (74, 0.808)\n",
+      "대통령 - 대통령이 (1454, 0.807)\n",
+      "대통령 - 이명박 (70, 0.805)\n",
+      "대통령 - 경선 (41, 0.797)\n",
+      "대통령 - 박정희 (48, 0.794)\n",
+      "대통령 - 대통령을 (180, 0.791)\n",
+      "대통령 - 노무현 (266, 0.782)\n",
+      "\n",
+      "\n",
+      "Query = 축구\n",
+      "Vocab(count:36, index:15179, sample_int:4294967296)\n",
+      "축구 - 연주 (43, 0.823)\n",
+      "축구 - 1세대 (39, 0.780)\n",
+      "축구 - 브라운 (60, 0.778)\n",
+      "축구 - 5개의 (35, 0.764)\n",
+      "축구 - 오케스트라 (54, 0.762)\n",
+      "축구 - 곡성 (37, 0.752)\n",
+      "축구 - 악기 (35, 0.748)\n",
+      "축구 - 국악 (31, 0.746)\n",
+      "축구 - 태양 (33, 0.742)\n",
+      "축구 - 참가했다 (59, 0.739)\n",
+      "\n",
+      "\n",
+      "Query = 외교\n",
+      "Vocab(count:757, index:542, sample_int:4294967296)\n",
+      "외교 - 국방 (297, 0.952)\n",
+      "외교 - 차관급 (50, 0.941)\n",
+      "외교 - 한미 (864, 0.917)\n",
+      "외교 - 외교와 (32, 0.911)\n",
+      "외교 - 고위급 (165, 0.889)\n",
+      "외교 - 양국이 (120, 0.867)\n",
+      "외교 - 양국은 (219, 0.864)\n",
+      "외교 - 국방장관 (310, 0.863)\n",
+      "외교 - 양국 (487, 0.838)\n",
+      "외교 - 군사 (63, 0.830)\n",
+      "\n",
+      "\n",
+      "Query = 정책\n",
+      "Vocab(count:441, index:1063, sample_int:4294967296)\n",
+      "정책 - 정책의 (76, 0.851)\n",
+      "정책 - 차원의 (217, 0.831)\n",
+      "정책 - 안보 (183, 0.829)\n",
+      "정책 - 정책을 (280, 0.813)\n",
+      "정책 - 제도 (218, 0.811)\n",
+      "정책 - 정책과 (62, 0.810)\n",
+      "정책 - 저출산 (106, 0.800)\n",
+      "정책 - 협력 (311, 0.798)\n",
+      "정책 - 정부의 (677, 0.797)\n",
+      "정책 - 차원에서 (300, 0.795)\n",
+      "\n",
+      "\n",
+      "Query = 미국\n",
+      "Vocab(count:4057, index:75, sample_int:4294967296)\n",
+      "미국 - 영국 (611, 0.766)\n",
+      "미국 - 호주 (236, 0.747)\n",
+      "미국 - 인도 (198, 0.735)\n",
+      "미국 - 일본 (1615, 0.731)\n",
+      "미국 - 해군 (170, 0.727)\n",
+      "미국 - 미국의 (951, 0.720)\n",
+      "미국 - 미 (1264, 0.712)\n",
+      "미국 - 한국과 (319, 0.711)\n",
+      "미국 - 한국 (1681, 0.708)\n",
+      "미국 - 미국과 (226, 0.707)\n",
+      "\n",
+      "\n",
+      "Query = 일본\n",
+      "Vocab(count:1615, index:227, sample_int:4294967296)\n",
+      "일본 - 호주 (236, 0.843)\n",
+      "일본 - 영국 (611, 0.814)\n",
+      "일본 - 중국 (2523, 0.812)\n",
+      "일본 - 홍콩 (207, 0.794)\n",
+      "일본 - 한국 (1681, 0.789)\n",
+      "일본 - 대만 (186, 0.770)\n",
+      "일본 - 태국 (127, 0.761)\n",
+      "일본 - 인도 (198, 0.752)\n",
+      "일본 - 말레이시아 (95, 0.744)\n",
+      "일본 - 싱가포르 (105, 0.732)\n",
+      "\n",
+      "\n",
+      "Query = 중국\n",
+      "Vocab(count:2523, index:132, sample_int:4294967296)\n",
+      "중국 - 일본 (1615, 0.812)\n",
+      "중국 - 중국의 (365, 0.762)\n",
+      "중국 - 한국 (1681, 0.750)\n",
+      "중국 - 호주 (236, 0.735)\n",
+      "중국 - 인도 (198, 0.734)\n",
+      "중국 - 브라질 (239, 0.698)\n",
+      "중국 - 인도네시아 (194, 0.692)\n",
+      "중국 - 일본의 (273, 0.686)\n",
+      "중국 - 터키 (65, 0.686)\n",
+      "중국 - 한국과 (319, 0.684)\n",
+      "\n",
+      "\n",
+      "Query = 아이오아이\n",
+      "Vocab(count:123, index:4400, sample_int:4294967296)\n",
+      "아이오아이 - 몬스타엑스 (69, 0.933)\n",
+      "아이오아이 - 방탄소년단 (200, 0.929)\n",
+      "아이오아이 - 엑스 (44, 0.906)\n",
+      "아이오아이 - 샤이니 (173, 0.901)\n",
+      "아이오아이 - 에이핑크 (159, 0.886)\n",
+      "아이오아이 - 몬스타 (56, 0.879)\n",
+      "아이오아이 - 갓세븐 (32, 0.873)\n",
+      "아이오아이 - 신용재 (33, 0.870)\n",
+      "아이오아이 - 다비치 (51, 0.868)\n",
+      "아이오아이 - 코드 (41, 0.864)\n"
      ]
     },
     {
@@ -209,165 +348,7 @@
      "output_type": "stream",
      "text": [
       "/home/lovit/anaconda3/envs/pytorch/lib/python3.7/site-packages/ipykernel_launcher.py:8: DeprecationWarning: Call to deprecated `most_similar` (Method will be removed in 4.0.0, use self.wv.most_similar() instead).\n",
-      "  \n",
-      "/home/lovit/anaconda3/envs/pytorch/lib/python3.7/site-packages/gensim/matutils.py:737: FutureWarning: Conversion of the second argument of issubdtype from `int` to `np.signedinteger` is deprecated. In future, it will be treated as `np.int64 == np.dtype(int).type`.\n",
-      "  if np.issubdtype(vec.dtype, np.int):\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "국방부 - 카터 (207, 0.901)\n",
-      "국방부 - 국방장관이 (83, 0.860)\n",
-      "국방부 - 케리 (401, 0.859)\n",
-      "국방부 - 애슈턴 (130, 0.859)\n",
-      "국방부 - 윤병세 (297, 0.858)\n",
-      "국방부 - 산업통상자원부 (114, 0.846)\n",
-      "국방부 - 외교부 (418, 0.839)\n",
-      "국방부 - 참석하는 (94, 0.833)\n",
-      "국방부 - 국무장관과 (40, 0.832)\n",
-      "\n",
-      "\n",
-      "Query = 정부\n",
-      "Vocab(count:1005, index:380, sample_int:4294967296)\n",
-      "정부 - 정부의 (677, 0.888)\n",
-      "정부 - 정부와 (203, 0.822)\n",
-      "정부 - 예산 (305, 0.778)\n",
-      "정부 - 현 (689, 0.762)\n",
-      "정부 - 정부는 (726, 0.760)\n",
-      "정부 - 정부에서 (98, 0.757)\n",
-      "정부 - 보수 (88, 0.756)\n",
-      "정부 - 누리과정 (45, 0.744)\n",
-      "정부 - 내년도 (114, 0.732)\n",
-      "정부 - 구조조정 (166, 0.729)\n",
-      "\n",
-      "\n",
-      "Query = 국정원\n",
-      "Vocab(count:284, index:1794, sample_int:4294967296)\n",
-      "국정원 - 국감에서 (136, 0.812)\n",
-      "국정원 - 이병호 (366, 0.790)\n",
-      "국정원 - 정보위 (292, 0.785)\n",
-      "국정원 - 통화에서 (130, 0.775)\n",
-      "국정원 - 국가정보원 (41, 0.773)\n",
-      "국정원 - 연합뉴스와의 (37, 0.761)\n",
-      "국정원 - 김도읍 (92, 0.758)\n",
-      "국정원 - 국정원장의 (162, 0.747)\n",
-      "국정원 - 정보위원회 (121, 0.744)\n",
-      "국정원 - 정세균 (44, 0.742)\n",
-      "\n",
-      "\n",
-      "Query = 대통령\n",
-      "Vocab(count:1187, index:309, sample_int:4294967296)\n",
-      "대통령 - 대통령과 (197, 0.857)\n",
-      "대통령 - 대통령의 (856, 0.850)\n",
-      "대통령 - 대통령도 (53, 0.829)\n",
-      "대통령 - 이명박 (70, 0.824)\n",
-      "대통령 - 박정희 (48, 0.822)\n",
-      "대통령 - 김대중 (74, 0.809)\n",
-      "대통령 - 노무현 (266, 0.798)\n",
-      "대통령 - 대통령이 (1454, 0.795)\n",
-      "대통령 - 대통령을 (180, 0.787)\n",
-      "대통령 - 경선 (41, 0.784)\n",
-      "\n",
-      "\n",
-      "Query = 축구\n",
-      "Vocab(count:36, index:15179, sample_int:4294967296)\n",
-      "축구 - 연주 (43, 0.736)\n",
-      "축구 - 민족 (36, 0.733)\n",
-      "축구 - 1세대 (39, 0.730)\n",
-      "축구 - 오케스트라 (54, 0.709)\n",
-      "축구 - 생체 (48, 0.701)\n",
-      "축구 - 3위에 (30, 0.700)\n",
-      "축구 - 댄 (38, 0.699)\n",
-      "축구 - 두산 (49, 0.699)\n",
-      "축구 - 5개의 (35, 0.697)\n",
-      "축구 - 함정 (37, 0.694)\n",
-      "\n",
-      "\n",
-      "Query = 외교\n",
-      "Vocab(count:757, index:542, sample_int:4294967296)\n",
-      "외교 - 국방 (297, 0.939)\n",
-      "외교 - 차관급 (50, 0.903)\n",
-      "외교 - 외교와 (32, 0.901)\n",
-      "외교 - 고위급 (165, 0.893)\n",
-      "외교 - 한미 (864, 0.887)\n",
-      "외교 - 양국은 (219, 0.866)\n",
-      "외교 - 국방장관 (310, 0.858)\n",
-      "외교 - 양국이 (120, 0.828)\n",
-      "외교 - 양국 (487, 0.828)\n",
-      "외교 - 미군의 (31, 0.816)\n",
-      "\n",
-      "\n",
-      "Query = 정책\n",
-      "Vocab(count:441, index:1063, sample_int:4294967296)\n",
-      "정책 - 정책의 (76, 0.870)\n",
-      "정책 - 안보 (183, 0.839)\n",
-      "정책 - 규제 (331, 0.828)\n",
-      "정책 - 정부의 (677, 0.815)\n",
-      "정책 - 차원의 (217, 0.812)\n",
-      "정책 - 논의가 (129, 0.812)\n",
-      "정책 - 정책과 (62, 0.811)\n",
-      "정책 - 제도 (218, 0.800)\n",
-      "정책 - 정책을 (280, 0.799)\n",
-      "정책 - 협력 (311, 0.791)\n",
-      "\n",
-      "\n",
-      "Query = 미국\n",
-      "Vocab(count:4057, index:75, sample_int:4294967296)\n",
-      "미국 - 미국과 (226, 0.735)\n",
-      "미국 - 영국 (611, 0.734)\n",
-      "미국 - 일본 (1615, 0.734)\n",
-      "미국 - 러시아 (395, 0.723)\n",
-      "미국 - 인도 (198, 0.721)\n",
-      "미국 - 미국의 (951, 0.714)\n",
-      "미국 - 해군 (170, 0.712)\n",
-      "미국 - 한국과 (319, 0.708)\n",
-      "미국 - 시카고 (67, 0.706)\n",
-      "미국 - 미 (1264, 0.702)\n",
-      "\n",
-      "\n",
-      "Query = 일본\n",
-      "Vocab(count:1615, index:227, sample_int:4294967296)\n",
-      "일본 - 호주 (236, 0.841)\n",
-      "일본 - 중국 (2523, 0.840)\n",
-      "일본 - 영국 (611, 0.826)\n",
-      "일본 - 홍콩 (207, 0.806)\n",
-      "일본 - 한국 (1681, 0.797)\n",
-      "일본 - 대만 (186, 0.795)\n",
-      "일본 - 태국 (127, 0.795)\n",
-      "일본 - 싱가포르 (105, 0.787)\n",
-      "일본 - 인도 (198, 0.783)\n",
-      "일본 - 터키 (65, 0.769)\n",
-      "\n",
-      "\n",
-      "Query = 중국\n",
-      "Vocab(count:2523, index:132, sample_int:4294967296)\n",
-      "중국 - 일본 (1615, 0.840)\n",
-      "중국 - 중국의 (365, 0.768)\n",
-      "중국 - 인도 (198, 0.765)\n",
-      "중국 - 인도네시아 (194, 0.758)\n",
-      "중국 - 한국 (1681, 0.740)\n",
-      "중국 - 유럽 (540, 0.737)\n",
-      "중국 - 터키 (65, 0.729)\n",
-      "중국 - 일본의 (273, 0.725)\n",
-      "중국 - 일본과 (69, 0.721)\n",
-      "중국 - 호주 (236, 0.717)\n",
-      "\n",
-      "\n",
-      "Query = 아이오아이\n",
-      "Vocab(count:123, index:4400, sample_int:4294967296)\n",
-      "아이오아이 - 몬스타엑스 (69, 0.929)\n",
-      "아이오아이 - 방탄소년단 (200, 0.919)\n",
-      "아이오아이 - 샤이니 (173, 0.891)\n",
-      "아이오아이 - 몬스타 (56, 0.890)\n",
-      "아이오아이 - 신용재 (33, 0.888)\n",
-      "아이오아이 - 갓세븐 (32, 0.887)\n",
-      "아이오아이 - 코드 (41, 0.887)\n",
-      "아이오아이 - 엑스 (44, 0.886)\n",
-      "아이오아이 - 에이핑크 (159, 0.886)\n",
-      "아이오아이 - 샤이니가 (40, 0.882)\n"
+      "  \n"
      ]
     }
    ],
