--- a/day04_embedding_and_visualizing/day4_a_cooccurrence_matrix.ipynb
+++ b/day04_embedding_and_visualizing/day4_a_cooccurrence_matrix.ipynb
@@ -18,14 +18,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "soynlp=0.0.493\n",
-      "added lovit_textmining_dataset\n",
-      "konlpy == 0.5.1\n"
+      "konlpy == 0.5.2\n"
      ]
     }
    ],
    "source": [
-    "import config\n",
     "import konlpy\n",
     "from konlpy.tag import Okt\n",
     "\n",
@@ -479,8 +476,8 @@
      "output_type": "stream",
      "text": [
       "Create (word, contexts) matrix\n",
-      "  - counting word frequency from 0 sents, mem=0.534 Gb\n",
-      "  - scanning (word, context) pairs from 0 sents, mem=0.535 Gb\n",
+      "  - counting word frequency from 0 sents, mem=0.513 Gb\n",
+      "  - scanning (word, context) pairs from 0 sents, mem=0.513 Gb\n",
       "  - (word, context) matrix was constructed. shape = (19, 19)                    \n",
       "  - done\n"
      ]
@@ -542,25 +539,25 @@
     {
      "data": {
       "text/plain": [
-       "matrix([[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0],\n",
-       "        [0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1],\n",
-       "        [0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1],\n",
-       "        [0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1],\n",
-       "        [0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0],\n",
-       "        [1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0],\n",
-       "        [1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0],\n",
-       "        [0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0],\n",
-       "        [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0],\n",
-       "        [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1],\n",
-       "        [0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0]],\n",
+       "matrix([[0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0],\n",
+       "        [0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0],\n",
+       "        [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1],\n",
+       "        [1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1],\n",
+       "        [0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0],\n",
+       "        [0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1],\n",
+       "        [0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1],\n",
+       "        [0, 0, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "        [0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0]],\n",
        "       dtype=int64)"
       ]
      },
@@ -581,25 +578,25 @@
     {
      "data": {
       "text/plain": [
-       "['사이/Noun',\n",
-       " '정식/Noun',\n",
-       " '북한/Noun',\n",
-       " '남북/Noun',\n",
+       "['정식/Noun',\n",
        " '역사/Noun',\n",
-       " '간/Noun',\n",
-       " '20일/Number',\n",
        " '적/Suffix',\n",
-       " '이/Josa',\n",
-       " '인/Josa',\n",
-       " '국무위원/Noun',\n",
-       " '에/Josa',\n",
-       " '청와대/Noun',\n",
-       " '개통/Noun',\n",
+       " '북한/Noun',\n",
+       " '핫라인/Noun',\n",
+       " '사이/Noun',\n",
        " '됐다/Verb',\n",
-       " '회/Noun',\n",
-       " '와/Josa',\n",
        " '정상/Noun',\n",
-       " '핫라인/Noun']"
+       " '에/Josa',\n",
+       " '국무위원/Noun',\n",
+       " '와/Josa',\n",
+       " '간/Noun',\n",
+       " '이/Josa',\n",
+       " '청와대/Noun',\n",
+       " '회/Noun',\n",
+       " '인/Josa',\n",
+       " '남북/Noun',\n",
+       " '개통/Noun',\n",
+       " '20일/Number']"
       ]
      },
      "execution_count": 15,
