--- a/day04_embedding_and_visualizing/day4_a_fasttext_facebook.ipynb
+++ b/day04_embedding_and_visualizing/day4_a_fasttext_facebook.ipynb
@@ -1,55 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "앞서 Gensim 을 이용한 FastText 를 학습했습니다. Facebook Research 에서도 FastText 코드를 제공합니다. 설치는 pip install 로 가능합니다. 여기에서는 subword enriching 인 unsupervised word embedding 과 document classification 을 위한 supervised word embedding 두 가지 버전을 모두 제공합니다. 현재 버전은 0.9.1 입니다. 0.8.x 에서 0.9.x 로 버전이 변화하면서 인터페이스가 많이 바뀌었습니다. 이 튜토리얼은 0.9.1 기준으로 작성되었습니다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "soynlp=0.0.493\n",
-      "added lovit_textmining_dataset\n",
-      "0.8.3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import config\n",
-    "import fasttext\n",
-    "\n",
-    "print(fasttext.__VERSION__)\n",
-    "\n",
-    "TRAIN_FASTTEXT = False"
+    "import fasttext"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "앞서 Gensim 을 이용한 FastText 를 학습했습니다. Facebook Research 에서도 FastText 코드를 제공합니다. 설치는 pip install 로 가능합니다.\n",
+    "## Unsupervised embedding\n",
     "\n",
-    "```\n",
-    "pip install fasttext\n",
-    "```\n",
-    "\n",
-    "여기에서는 subword enriching 인 unsupervised word embedding 과 document classification 을 위한 supervised word embedding 두 가지 버전을 모두 제공합니다."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Word representation using subword embedding\n",
-    "\n",
-    "Unsupervised FastText 는 띄어쓰기 기준으로 단어가 구분되는 데이터셋이면 됩니다. 한글의 경우 초/중/종성을 구분하면 더 좋은 성능을 얻을 수 있습니다.\n",
-    "\n",
-    "```\n",
-    "ㅋㅡ-ㄹㅣ-ㅅㅡ-ㅌㅗ-ㅍㅓ- ㄴㅗㄹㄹㅏㄴ ㅇㅔ-ㄱㅔ- ㅇㅜ-ㄹㅣ-ㄴㅡㄴ ㄴㅗㄹㄹㅏㄴ ㄷㅏ-\n",
-    "ㅇㅣㄴㅅㅔㅂㅅㅕㄴ ㅈㅓㅇㅁㅏㄹ ㅎㅡㅇㅁㅣ-ㅈㅣㄴㅈㅣㄴㅎㅏ-ㄱㅔ- ㅂㅘㅆㅇㅓㅆㄱㅗ- ㅋㅡ-ㄹㅣ-ㅅㅡ-ㅌㅗ-ㅍㅓ...\n",
-    "ㄴㅗㄹㄹㅏㄴㅇㅣ-ㅁㅕㄴ ㅁㅜ-ㅈㅗ-ㄱㅓㄴ ㅂㅘ-ㅇㅑ- ㄷㅚㄴㄷㅏ- ㅇㅙ-ㄴㅑ-ㅎㅏ-ㅁㅕㄴ ㅁㅗ-ㄷㅡㄴ ㅈㅏㄱㅍㅜㅁ...\n",
-    "```"
+    "Unsupervised FastText 는 띄어쓰기 기준으로 단어가 구분되는 데이터셋이면 됩니다. 한글의 경우 초/중/종성을 구분하면 더 좋은 성능을 얻을 수 있습니다."
    ]
   },
   {
@@ -68,7 +41,7 @@
     }
    ],
    "source": [
-    "from navermovie_comments import get_facebook_fasttext_data\n",
+    "from lovit_textmining_dataset.navermovie_comments import get_facebook_fasttext_data\n",
     "\n",
     "corpus_path = get_facebook_fasttext_data(large=False, supervise=False)\n",
     "\n",
@@ -92,19 +65,8 @@
    "source": [
     "unsupervised_modelname = './fasttext_subword'\n",
     "\n",
-    "if TRAIN_FASTTEXT:\n",
-    "    embedding_model = fasttext.cbow(\n",
-    "        corpus_path,\n",
-    "        unsupervised_modelname,\n",
-    "        minn = 3,\n",
-    "        maxn = 6,\n",
-    "        thread = 8\n",
-    "    )\n",
-    "else:\n",
-    "    embedding_model = fasttext.load_model(\n",
-    "        unsupervised_modelname+'.bin',\n",
-    "        encoding = 'utf-8'\n",
-    "    )"
+    "model = fasttext.train_unsupervised(corpus_path, model='skipgram', minn=3, maxn=6, thread=8)\n",
+    "model.save_model(f\"{unsupervised_modelname}.bin\")"
    ]
   },
   {
@@ -122,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8409520615433745"
+       "0.7917058"
       ]
      },
      "execution_count": 4,
@@ -133,6 +95,8 @@
    "source": [
     "import re\n",
     "from soynlp.hangle import decompose, compose\n",
+    "from numpy import dot\n",
+    "from numpy.linalg import norm\n",
     "\n",
     "def remove_doublespace(s):\n",
     "    doublespace_pattern = re.compile('\\s+')\n",
@@ -168,30 +132,41 @@
     "def cosine_similarity(word1, word2):\n",
     "    word1 = encode(word1)\n",
     "    word2 = encode(word2)\n",
-    "    return embedding_model.cosine_similarity(word1, word2)\n",
+    "    v1 = model.get_word_vector(word1)\n",
+    "    v2 = model.get_word_vector(word2)\n",
+    "    cos_sim = dot(v1, v2)/(norm(v1)*norm(v2))\n",
+    "    return cos_sim\n",
     "\n",
     "cosine_similarity('재미썼어', '재밌었어')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ㅈㅐ-ㅁㅣㅆㅇㅓㅆㅇㅓ-', '<ㅈㅐ', '<ㅈㅐ-']\n",
+      "[   8295  446956 1433507]\n"
+     ]
+    }
+   ],
+   "source": [
+    "subwords, indices = model.get_subwords(encode('재밌었어'))\n",
+    "print(subwords[:3])\n",
+    "print(indices[:3])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Supervised classifier\n",
+    "## Supervised embedding\n",
     "\n",
-    "평점 데이터를 이용하여 classifier 를 학습하는 코드입니다. 8점 이상을 positive, 3점 이하를 negative 라 하였습니다. \n",
-    "\n",
-    "\"word_ngrams = 1\" parameter는 단어의 ngram 까지도 잡아주는 parameter 입니다만, 지금 공개된 버전에서는 학습이 안되는 버그가 있습니다. (0.8.3) 기본값인 1만을 이용합니다. \n",
-    "\n",
-    "Supervised FastText 는 앞에 label_prefix 를 입력한 형태의 데이터를 가정합니다. 띄어쓰기 기준으로 prefix 가 붙은 단어는 document label 로 이용합니다. 만약 `__label__` 을 prefix 로 이용한다면 아래처럼 구성할 수 있습니다.\n",
-    "\n",
-    "```\n",
-    "__label__pos ㅋㅡ-ㄹㅣ-ㅅㅡ-ㅌㅗ-ㅍㅓ- ㄴㅗㄹㄹㅏㄴ ㅇㅔ-ㄱㅔ- ㅇㅜ-ㄹㅣ-ㄴㅡㄴ ㄴㅗㄹㄹㅏㄴ ㄷㅏ-\n",
-    "__label__pos ㅇㅣㄴㅅㅔㅂㅅㅕㄴ ㅈㅓㅇㅁㅏㄹ ㅎㅡㅇㅁㅣ-ㅈㅣㄴㅈㅣㄴㅎㅏ-ㄱㅔ- ㅂㅘㅆㅇㅓㅆㄱㅗ- ㅋㅡ-ㄹㅣ-ㅅㅡ-ㅌㅗ-ㅍㅓ...\n",
-    "__label__pos ㄴㅗㄹㄹㅏㄴㅇㅣ-ㅁㅕㄴ ㅁㅜ-ㅈㅗ-ㄱㅓㄴ ㅂㅘ-ㅇㅑ- ㄷㅚㄴㄷㅏ- ㅇㅙ-ㄴㅑ-ㅎㅏ-ㅁㅕㄴ ㅁㅗ-ㄷㅡㄴ ㅈㅏㄱㅍㅜㅁ...\n",
-    "```\n",
-    "\n",
-    "이 형태로 데이터를 미리 정리해두었습니다. 평점 기준 1 ~ 3 점은 neg (negative), 8 ~ 10 점은 pos (positive) 영화 평으로 생각합니다. 클래스는 반드시 두 개가 아니어도 괜찮습니다. Supervised FastText 는 Softmax 를 이용하기 때문에 multi class classification 을 지원합니다."
+    "평점 데이터를 이용하여 classifier 를 학습하는 코드입니다. 8점 이상을 positive, 3점 이하를 negative 라 하였습니다. Supervised FastText 는 앞에 label_prefix 를 입력한 형태의 데이터를 가정합니다. 띄어쓰기 기준으로 prefix 가 붙은 단어는 document label 로 이용합니다. 이 형태로 데이터를 미리 정리해두었습니다. 평점 기준 1 ~ 3 점은 neg (negative), 8 ~ 10 점은 pos (positive) 영화 평으로 생각합니다. 클래스는 반드시 두 개가 아니어도 괜찮습니다. Supervised FastText 는 Softmax 를 이용하기 때문에 multi class classification 을 지원합니다."
    ]
   },
   {
@@ -225,18 +200,8 @@
    "source": [
     "supervised_modelname = './fasttext_supervised'\n",
     "\n",
-    "if TRAIN_FASTTEXT:\n",
-    "    classifier_model = fasttext.supervised(\n",
-    "        corpus_path,\n",
-    "        supervised_modelname,\n",
-    "        label_prefix = '__label__',\n",
-    "        word_ngrams = 1,\n",
-    "        thread = 8)\n",
-    "else:\n",
-    "    classifier_model = fasttext.load_model(\n",
-    "        supervised_modelname+'.bin',\n",
-    "        label_prefix = '__label__'\n",
-    "    )"
+    "model_superv = fasttext.train_supervised(corpus_path, label_prefix='__label__', thread=8)\n",
+    "model_superv.save_model(f'{supervised_modelname}.bin')"
    ]
   },
   {
@@ -254,7 +219,7 @@
     {
      "data": {
       "text/plain": [
-       "['pos', 'neg']"
+       "['__label__pos', '__label__neg']"
       ]
      },
      "execution_count": 7,
@@ -263,7 +228,7 @@
     }
    ],
    "source": [
-    "classifier_model.labels"
+    "model_superv.labels"
    ]
   },
   {
@@ -310,19 +275,21 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[['pos', 'neg'], ['neg', 'pos'], ['neg', 'pos']]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['__label__neg'], ['__label__neg'], ['__label__neg']]\n",
+      "[[0.54100609]\n",
+      " [0.99834436]\n",
+      " [0.99190998]]\n"
+     ]
     }
    ],
    "source": [
     "words = encode(sent).split()\n",
-    "classifier_model.predict(words,k=2)"
+    "labels, probs = model_superv.predict(words,k=1)\n",
+    "print(labels)\n",
+    "print(probs)"
    ]
   },
   {
@@ -330,28 +297,6 @@
    "metadata": {},
    "source": [
     "classifier.predict_prob()는 각 단어에 대하여 가까운 k 개 클래스의 확률을 계산합니다. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[('pos', 0.607422), ('neg', 0.390625)],\n",
-       " [('neg', 0.998047), ('pos', 1.95313e-08)],\n",
-       " [('neg', 0.982422), ('pos', 0.015625)]]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "classifier_model.predict_proba(words,k=2)"
    ]
   },
   {
@@ -363,27 +308,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[('pos', 0.994141), ('neg', 0.00390627)],\n",
-       " [('pos', 0.998047), ('neg', 1.95313e-08)],\n",
-       " [('pos', 0.761719), ('neg', 0.236328)],\n",
-       " [('pos', 0.724609), ('neg', 0.273438)],\n",
-       " [('pos', 0.996094), ('neg', 0.00195314)]]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "와진짜: (pos, 0.9937)\n",
+      "개쩐다: (pos, 0.9931)\n",
+      "영화: (pos, 0.5784)\n",
+      "졸라: (neg, 0.6893)\n",
+      "재밌어: (pos, 0.9776)\n",
+      "언플: (neg, 1.0)\n",
+      "쩌네: (neg, 0.8377)\n"
+     ]
     }
    ],
    "source": [
-    "words = encode('와진짜 개쩐다 영화 졸라 재밌어').split()\n",
-    "classifier_model.predict_proba(words,k=2)"
+    "words = encode('와진짜 개쩐다 영화 졸라 재밌어 언플 쩌네').split()\n",
+    "labels, probs = model_superv.predict(words,k=1)\n",
+    "for word, label, prob in zip(words, labels, probs):\n",
+    "    word = decode(word)\n",
+    "    label = label[0][9:]\n",
+    "    prob = float(prob)\n",
+    "    print(f'{word}: ({label}, {prob:.4})')"
    ]
   },
   {
@@ -395,26 +344,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[('neg', 0.916016), ('pos', 0.0820313)],\n",
-       " [('neg', 0.964844), ('pos', 0.0332031)],\n",
-       " [('neg', 0.900391), ('pos', 0.0976563)],\n",
-       " [('neg', 0.996094), ('pos', 0.00195314)]]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "씹노잼: (neg, 0.9241)\n",
+      "이걸: (neg, 0.9956)\n",
+      "영화라고: (neg, 0.9424)\n",
+      "만드냐: (neg, 0.9986)\n"
+     ]
     }
    ],
    "source": [
     "words = encode('씹노잼 이걸 영화라고 만드냐').split()\n",
-    "classifier_model.predict_proba(words,k=2)"
+    "labels, probs = model_superv.predict(words,k=1)\n",
+    "for word, label, prob in zip(words, labels, probs):\n",
+    "    word = decode(word)\n",
+    "    label = label[0][9:]\n",
+    "    prob = float(prob)\n",
+    "    print(f'{word}: ({label}, {prob:.4})')"
    ]
   },
   {
@@ -426,24 +377,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[('neg', 0.912109), ('pos', 0.0859375)],\n",
-       " [('pos', 0.998047), ('neg', 1.95313e-08)]]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이게: (neg, 0.9499)\n",
+      "영화지: (pos, 0.9967)\n"
+     ]
     }
    ],
    "source": [
     "words = encode('이게 영화지').split()\n",
-    "classifier_model.predict_proba(words,k=2)"
+    "labels, probs = model_superv.predict(words,k=1)\n",
+    "for word, label, prob in zip(words, labels, probs):\n",
+    "    word = decode(word)\n",
+    "    label = label[0][9:]\n",
+    "    prob = float(prob)\n",
+    "    print(f'{word}: ({label}, {prob:.4})')"
    ]
   },
   {
@@ -455,32 +408,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[('neg', 0.990234), ('pos', 0.00781252)],\n",
-       " [('neg', 0.998047), ('pos', 1.95313e-08)]]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "씹: (neg, 0.9955)\n",
+      "이게뭐냐: (neg, 1.0)\n"
+     ]
     }
    ],
    "source": [
     "words = encode('씹ㅏㄹ 이게뭐냐').split()\n",
-    "classifier_model.predict_proba(words,k=2)"
+    "labels, probs = model_superv.predict(words,k=1)\n",
+    "for word, label, prob in zip(words, labels, probs):\n",
+    "    word = decode(word)\n",
+    "    label = label[0][9:]\n",
+    "    prob = float(prob)\n",
+    "    print(f'{word}: ({label}, {prob:.4})')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
